fixed overflow card

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,7 +1,7 @@
 .footer {
   background: #292927;
   height: 40px;
-  margin-top: 48px;
+  padding-left: 152px !important;
 }
 .text {
   font-family: Roboto;
@@ -9,6 +9,6 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
-  margin-left: 152px;
+  color: #ffffff !important;
 }
 
