--- a/src/components/SubNew/styles.css
+++ b/src/components/SubNew/styles.css
@@ -10,14 +10,14 @@
   box-shadow: 0px 2px 4px rgba(41, 41, 39, 0.05),
     0px 5px 10px rgba(41, 41, 39, 0.1);
   border-radius: 8px;
-  
   min-width: 560px;
   max-height: 218px;
+  padding: 24px 0;
 }
 
 .subNewImage {
   width: 100%;
-  max-height: 218px;
+  max-height: 170px;
   object-fit: cover;
   height: 100%;
 }
@@ -29,6 +29,14 @@
   font-size: 12px;
   line-height: 16px;
   color: #000000;
+}
+
+@media only screen and (max-width: 700px) {
+  .cardText {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
 }
 
 .newsCardButton {
