--- a/src/components/views/styles.css
+++ b/src/components/views/styles.css
@@ -1,3 +1,8 @@
 .subNewCol {
     margin-top: 16px;
 }
+
+.newSection {
+    height: 100%;
+    padding: 48px;
+}
